--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <button class="top-right-button" onclick="window.location.href='hist.html'">Go to Expense Tracker</button>
+        <button class="top-right-button" onclick="window.location.href='hist.html'">Expense Analysis</button>
         <div class="login-box">
             <div class="header">
                 <img src="wallet.png" alt="Wallet" height="45px">
